--- a/templates/hospital/departmentForm.html.twig
+++ b/templates/hospital/departmentForm.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="card">
         <div class="card-body">
-            {{ form(hospital_form) }}
+            {{ form(form) }}
         </div>
     </div>
 {% endblock %}
@@ -14,3 +14,4 @@
     {{ parent() }}
     <script src="{{ asset('bundles/gessehcore/js/addSub.js') }}" type="text/javascript"></script>
 {% endblock %}
+
