--- a/templates/hospital/index.html.twig
+++ b/templates/hospital/index.html.twig
@@ -28,117 +28,20 @@
 {% endblock %}
 
 {% block content %}
-        {% for hospital in hospitals %}
+    {% for hospital in hospitals %}
         <div class="card {% if not loop.first %}mt-3{% endif %}">
-                <h2 class="card-header text-center entity_title hospital_name">
-                    <a href="{{ path('GCore_FSIndex', {'slug': structure.slug, 'limit': {'slug': structure.slug, 'type': 'h.id', 'value': hospital.id, 'description': hospital.name}}) }}" title="Afficher les terrains de stage de l'hôpital '{{ hospital.name }}'">
-                        {{ hospital }}
-                    </a>
-                </h2>
-                <ul class="subentities departments">
-                    {% for department in hospital.departments %}
-                        {% set isSupervisor = false %}
-                        {% for repartition in department.repartitions|slice(-1, 1) %}
-                            {% if is_granted('ROLE_ADMIN') or repartition.number > 0 %}
-                            <li class="row subentity department {% if repartition.number < 1 %}notactive{% endif %}">
-                                <div class="col-sm-3 field subentity_title department_name">
-                                    <a href="{{ path('GCore_FSShowDepartment', {'slug': structure.slug, 'id': department.id, 'limit': limit }) }}" title="Afficher les informations du service '{{ department.name }}'">
-                                        {{ department.name }}
-                                    </a>
-                                </div>
-                                <ul class="col-sm-3 field subentity_item department_head">
-                                    {% set current = false %}
-                                    {% for accreditation in department.accreditations %}
-                                        {% if current != accreditation.supervisor %}
-                                            <li>{{ accreditation.supervisor }}</li>
-                                        {% endif %}
-                                        {% set current = accreditation.supervisor %}
-                                        {% if is_granted('ROLE_TEACHER') and accreditation.user.id == app.user.id %}{% set isSupervisor = true %}{% endif %}
-                                    {% endfor %}
-                                </ul>
-                                <ul class="col-sm-2 field subentity_item department_sector">
-                                    {% for accreditation in department.accreditations %}
-                                        <li><a href="{{ path('GCore_FSIndex', {'slug': structure.slug, 'limit': {'slug': structure.slug, 'type': 's.id', value: accreditation.sector.id, description: accreditation.sector.name}}) }}" title="Afficher les terrains de la catégorie {{ accreditation.sector }}">{{ accreditation.sector }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                                {% if param('simul_' ~ structure.slug ~ '_active') == true and is_granted('ROLE_STUDENT') %}
-                                    {% if repartition.cluster is not null %}
-                                        <div class="col-sm-2 field subentity_item department_cluster"><a href="{{ path('GCore_FSIndex', {'slug': structure.slug, 'limit': {'slug': structure.slug, 'type': 'r.cluster', value: repartition.cluster, description: repartition.cluster }}) }}" title="Afficher les terrains du cluster {{ repartition.cluster }}">Stage couplé</a></div>
-                                    {% else %}
-                                        <div class="col-sm-2"> </div>
-                                    {% endif %}
-                                    {% if repartition.number > 1 %}
-                                        <div class="col-sm-2 field subentity_item department_number">{{ repartition.number }} postes</div>
-                                    {% elseif repartition.number == 1 %}
-                                        <div class="col-sm-2 field subentity_item department_number">1 poste</div>
-                                    {% else %}
-                                        <div class="col-sm-2 field empty department_number">aucun poste</div>
-                                    {% endif %}
-                                {% endif %}
-                            </li>
-                            {% endif %}
-                        {% endfor %}
-                    {% else %}
-                        <li class="noentity department">Aucun service enregistré.</li>
-                    {% endfor %}
-                </ul>
-                {% if is_granted('ROLE_ADMIN') %}
-                <div class="card-footer btn-group text-center">
-                                <a class="btn btn-primary" href="{{ path('GCore_FSAEditHospital', {'slug': structure.slug, 'id': hospital.id, 'limit': limit }) }}" title="Modifier l'hôpital '{{ hospital.name }}'" class="edit">
-                                    <i class='fas fa-pencil'></i> Modifier
-                                </a>
-                                <a class="btn btn-primary" href="{{ path('GCore_PAPlacementIndex', {'slug': structure.slug, 'limit': { 'type': 'h.id', 'value': hospital.id, 'description': hospital.name }}) }}" title="Afficher les stages dans l'hôpital '{{ hospital.name }}'">
-                                    <i class='fas fa-list-alt'></i> Stages
-                                </a>
-                                <a class="btn btn-danger" href="{{ path('GCore_FSADeleteHospital', {'slug': structure.slug, 'id': hospital.id, 'limit': limit }) }}" title="Supprimer l'hôpital '{{ hospital.name }}'" class="confirm delete" confirm="Attention ! Supprimer cet hôpital supprimera également tous les terrains de stage qui lui sont liés ainsi que les données qui s'y rapportent. Confirmez-vous la suppression ?">
-                                    <i class='fas fa-trash'></i> Supprimer
-                                </a>
-                    </div>
-                {% endif %}
-            </div>
-        {% else %}
-            <div class="card noentity hospital">Aucun hôpital enregistré</div>
-        {% endfor %}
+            {% include 'hospital/hospital.html.twig' with {'structure': structure, 'hospital': hospital} %}
+        </div>
+    {% else %}
+        <div class="card noentity hospital">Aucun hôpital enregistré</div>
+    {% endfor %}
+
     {% if is_granted('ROLE_ADMIN') %}
-        <ul class="entities hospitals list-group">
-            {% for hospital in orphaneds %}{% if hospital not in hospitals %}
-                <li class="entity hospital row list-group-item notactive">
-                    <span class="btn-group pull-right">
-                        <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">Actions <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li class="edit">
-                                <a href="{{ path('GCore_FSAEditHospital', {'slug': structure.slug, 'id': hospital.id, 'limit': limit }) }}" title="Modifier l'hôpital '{{ hospital.name }}'" class="edit">
-                                    <i class='fas fa-pencil-alt'></i> Modifier
-                                </a>
-                            </li>
-                            <li class="list">
-                                <a href="{{ path('GCore_PAPlacementIndex', {'slug': structure.slug, 'limit': { 'type': 'h.id', 'value': hospital.id, 'description': hospital.name }}) }}" title="Afficher les stages dans l'hôpital '{{ hospital.name }}'">
-                                    <i class='fas fa-list-alt'></i> Stages
-                                </a>
-                            </li>
-                            <li class="delete">
-                                <a href="{{ path('GCore_FSADeleteHospital', {'slug': structure.slug, 'id': hospital.id, 'limit': limit }) }}" title="Supprimer l'hôpital '{{ hospital.name }}'" class="confirm delete" confirm="Attention ! Supprimer cet hôpital supprimera également tous les terrains de stage qui lui sont liés ainsi que les données qui s'y rapportent. Confirmez-vous la suppression ?">
-                                    <i class='fas fa-trash'></i> Supprimer
-                                </a>
-                            </li>
-                        </ul>
-                    </span>
-                <div class="field entity_title hospital_name">{{ hospital }}</div>
-                <ul class="subentities departments">
-                    {% for department in hospital.departments %}
-                        <li class="row subentity department notactive">
-                            <div class="col-sm-3 field subentity_title department_name">
-                                <a href="{{ path('GCore_FSShowDepartment', {'slug': structure.slug, 'id': department.id, 'limit': limit }) }}" title="Afficher les informations du service '{{ department.name }}'">
-                                    {{ department.name }}
-                                </a>
-                            </div>
-                        </li>
-                    {% else %}
-                        <li class="noentity department">Aucun service enregistré.</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}{% endfor %}
-        </ul>
+        {% for hospital in orphaneds %}{% if hospital not in hospitals and not limit %}
+            <div class="card mt-3">
+                {% include 'hospital/hospital.html.twig' with {'structure': structure, 'hospital': hospital} %}
+            </div>
+        {% endif %}{% endfor %}
     {% endif %}
 {% endblock %}
 
