--- a/templates/placement/period.html.twig
+++ b/templates/placement/period.html.twig
@@ -11,10 +11,10 @@
 {% block content %}
 <div class="card">
     <div class="card-body">
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
+        {{ form_start(period_form) }}
+        {{ form_widget(period_form) }}
         <button type="submit" title="Ajouter la session de stage" class="btn btn-primary btn-sm float-right">Suivant <i class="fas fa-arrow-right"></i></button>
-        {{ form_end(form) }}
+        {{ form_end(period_form) }}
     </div>
 </div>
 {% endblock %}
