--- a/templates/evaluation/form.html.twig
+++ b/templates/evaluation/form.html.twig
@@ -3,60 +3,26 @@
 {% block headline %}Ajouter/modifier un formulaire d'évaluation{% endblock %}
 
 {% block content %}
+    {% form_theme form 'jquery.collection.html.twig' %}
     <div class="card">
         <div class="card-body list-group list-group-flush">
-            {{ form_start(form) }}
-            <div class="list-group-item">
-                {{ form_row(form.name) }}
-            </div>
-            <div class="list-group-item card">
-                <div class="card-header text-center bg-primary text-white">Agréments</div>
-                <div class="card-body list-group list-group-flush">
-                    {% for sector in form.sectors %}
-                        <div class="list-group-item">
-                            {{ form_widget(sector) }}
-                        </div>
-                    {% endfor %}
-                </div>
-                <div class="card-footer text-center">
-                    <button class="btn btn-success btn-sm"><i class="fas fa-plus"></i> Ajouter</button>
-                </div>
-            </div>
-            <div class="list-group-item card">
-                <div class="card-header text-center bg-primary text-white">Questions du formulaire</div>
-                <div class="card-body list-group list-group-flush">
-                    {% for criteria in form.criterias %}
-                        <div class="list-group-item">
-                            <div class="d-flex justify-content-between">
-                                <div class="">{{ form_row(criteria.rank) }}</div>
-                                <div class="">{{ form_row(criteria.name) }}</div>
-                            </div>
-                            <div class="d-flex justify-content-between">
-                                <div class="">{{ form_row(criteria.type) }}</div>
-                                <div class="">{{ form_row(criteria.more) }}</div>
-                            </div>
-                            <div class="d-flex justify-content-between">
-                                <div class="">{{ form_widget(criteria.required) }}</div>
-                                <div class="">{{ form_widget(criteria.moderate) }}</div>
-                                <div class="">{{ form_widget(criteria.private) }}</div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-                <div class="card-footer text-center">
-                    <button class="btn btn-success btn-sm"><i class="fas fa-plus"></i> Ajouter</button>
-                </div>
-            </div>
-            <div class="list-group-item text-center">
-                <button class="btn btn-primary btn-sm" type="submit">Enregistrer</button>
-            </div>
-            {{ form_end(form) }}
+            {{ form(form) }}
         </div>
     </div>
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('bundles/gessehcore/js/addSub.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/jquery.collection.js') }}" type="text/javascript"></script>
+    <script type="text/javascript">
+        $('.criterias_collection').collection({
+            allow_up: false,
+            allow_down: false,
+            add_at_the_end: true,
+            add: '<a href="#"><i class="fas fa-plus"></i></a>',
+            remove: '<a href="#"><i class="fas fa-trash"></i></a>',
+            position_field_selector: '.criteria.position',
+        });
+        $('.criterias_collection-collection-actions').addClass('float-right');
+    </script>
 {% endblock %}
-
